panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__typedef__test_use_globally_typedefd_name_as_parameter_name_and_use_typedef.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/typedef/test_use_globally_typedefd_name_as_parameter_name_and_use_typedef.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/typedef/test_use_globally_typedefd_name_as_parameter_name_and_use_typedef.c"
   (typedef a `int`)
   (function-definition external
      f~0 `fn(a: int) -> int`
      (params
         a~2 `int`)
      (compound-statement
         (return (a~2 `int`))))
   (definition external global_value~3 `int` (42 `int`))
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (return
            (call `int`
               (addressof `ptr<fn(a: int) -> int>`
                  (f~0 `fn(a: int) -> int`))
               (global_value~3 `int`))))))

----- stderr -----
